--- a/src/app/Components/WindowsPortfolio.module.css
+++ b/src/app/Components/WindowsPortfolio.module.css
@@ -1,11 +1,23 @@
 .parentContainer {
-  position: relative;
-  width: 100vw;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  overflow: hidden; /* Prevents overflow */
+  width: 100vw;
+  background-size: cover;
+  background-position: center;
 }
 
 .window {
   position: absolute; /* Ensure windows are positioned absolutely */
   z-index: 10; /* Adjust z-index if needed */
+}
+
+.desktopGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-auto-rows: 100px;
+  gap: 20px;
+  justify-items: start;
+  align-items: start;
+  padding: 20px;
 }
