--- a/src/app/Components/WindowsPortfolio.module.css
+++ b/src/app/Components/WindowsPortfolio.module.css
@@ -1,4 +1,5 @@
 .parentContainer {
+  position: relative; /* Add this */
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -8,16 +9,17 @@
 }
 
 .window {
-  position: absolute; /* Ensure windows are positioned absolutely */
-  z-index: 10; /* Adjust z-index if needed */
+  position: absolute; 
+  z-index: 10; 
 }
 
 .desktopGrid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   grid-auto-rows: 100px;
-  gap: 20px;
+  gap: 10px;
   justify-items: start;
-  align-items: start;
   padding: 20px;
+  align-items: center; 
+  justify-items: center; 
 }
