update: it is translating from eng to georgian google translate toolbox also hidden needs some fixes

--- a/frontend/src/app/Components/LanguageSelector.module.css
+++ b/frontend/src/app/Components/LanguageSelector.module.css
@@ -1,12 +1,8 @@
 .languageSelector {
-    position: relative;
-  }
-  
-  .hidden {
-    display: none !important;
-  }
-  
-  .languageButton {
-    font-weight: 600;
-    text-transform: uppercase;
-  }
+  position: relative;
+  z-index: 1000;
+}
+
+.languageButton {
+  min-width: 70px;
+}
