update: clock and translator was very close to eachother and added date also

--- a/frontend/src/app/Components/WindowsPortfolio.module.css
+++ b/frontend/src/app/Components/WindowsPortfolio.module.css
@@ -36,3 +36,8 @@
     align-content: center;
   }
 }
+.headerContainer {
+  display: flex;
+  align-items: center;  /* Vertically center both components */
+  gap: 1rem;  /* Adds a gap between the Clock and LanguageSelector */
+}
